fix #1464: avatars overlap transparently

--- a/src/scss/layout/_root.scss
+++ b/src/scss/layout/_root.scss
@@ -8,6 +8,8 @@
     --#{$prefix}#{$name}-fg: #{if(contrast-ratio($color) > $min-contrast-ratio, var(--#{$prefix}light), var(--#{$prefix}dark))};
     --#{$prefix}#{$name}-darken: #{theme-color-darker($color)};
     --#{$prefix}#{$name}-rgb: #{to-rgb($color)};
+    --#{$prefix}#{$name}-lt: #{theme-color-lighter($color)};
+    --#{$prefix}#{$name}-lt-rgb: #{to-rgb(theme-color-lighter($color))};
   }
 
   --#{$prefix}bg-surface: #{$bg-surface};
