--- a/src/scss/utils/_colors.scss
+++ b/src/scss/utils/_colors.scss
@@ -6,10 +6,10 @@
   }
 
   .bg-#{"" + $color}-lt {
-    --#{$prefix}bg-opacity: .1;
+    --#{$prefix}bg-opacity: 1;
     --#{$prefix}text-opacity: 1;
     color: rgba(var(--#{$prefix}#{$color}-rgb), var(--#{$prefix}text-opacity)) !important;
-    background-color: rgba(var(--#{$prefix}#{$color}-rgb), var(--#{$prefix}bg-opacity)) !important;
+    background-color: rgba(var(--#{$prefix}#{$color}-lt-rgb), var(--#{$prefix}bg-opacity)) !important;
   }
 }
 
